html and css modified

--- a/ex_2.html
+++ b/ex_2.html
@@ -9,20 +9,19 @@
 </head>
 <body>
     <div class="sidebar"> 
-        
     <img src="rocket.jpg" alt="Logo" class="image">
     <nav>
         <ul>
-            <li><a href="#">Link1</a></li>
-            <li><a href="#">Link2</a></li>
-            <li><a href="#">Link3</a></li>
-            <li><a href="#">Link4</a></li>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
         </ul>
     </nav>
     <div class="last_part">
         <img src="avatar.jpg" alt="avatar image" class="image">
         <label for="fname">User Name:</label>
-        <input type="text" id="fname" value="User Name">
+        <input type="text" id="fname" value="User Name: ">
     </div>
 
   </div>  
